--- a/Misha.html
+++ b/Misha.html
@@ -1,1 +1,8 @@
-ПРИВЕТ ВСЕМ
+<HTML>
+<HEAD>
+<TITLE>
+Веб-сайт
+</title>
+<BODY background= C:\Picturesop\kuku.jpg  widht=200
+ heignt=190
+ border=3 vlink="olive">
