--- a/Misha.html
+++ b/Misha.html
@@ -3,6 +3,6 @@
 <TITLE>
 Веб-сайт
 </title>
-<BODY background= C:\Picturesop\kuku.jpg  widht=200
- heignt=190
+<BODY background= C:\Picturesop\uiui.jpg  widht=200
+ heignt=500
  border=3 vlink="olive">
